--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "backend",
+  "name": "timely-backend",
   "version": "1.0.0",
-  "main": "api.js",
+  "type": "module",
+  "main": "ai.mjs", 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-ai": "node ai.mjs",
+    "start-api": "node api.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "node-fetch": "^3.3.2"
   }
 }
